# game-engine

./: .gitignore  .gitmodules  README.md
App/: CMakeLists.txt
App/include/: GameLayer.h  GameSceneLayer.h
App/include/Scene/: Scene.h
App/rc/shaders/: colorFromLightSource.fragment.glsl  colorFromTexture.fragment.glsl  colorFromTextureMix.fragment.glsl  colorFromVertex.fragment.glsl  cubemap.fragment.glsl  positionAndColor.vertex.glsl  positionAndTexCoords.vertex.glsl  positionColorAndTexCoords.vertex.glsl  yellow.fragment.glsl
App/src/: GUILayer.cpp  GameLayer.cpp  GameSceneLayer.cpp  Main.cpp
App/src/Scene/: Scene.cpp
Engine/: CMakeLists.txt
Engine/include/: Application.h  AssetManager.h  Camera.h  Core.h  Input.h  InputKeyCodes.h  Layer.h  Log.h  OrthographicCamera.h  OrthographicCameraController.h  PerspectiveCamera.h  PerspectiveCameraController.h  Renderer.h  Window.h  gepch.h
Engine/include/ECS/: Component.h  Entity.h  EntityManager.h  EntityMemoryPool.h
Engine/include/Events/: Event.h  InputEvents.h
Engine/include/ImGui/: CoreImGui.h  ImGuiLayer.h
Engine/include/Platform/OpenGL/: OpenGLCubemapTexture.h  OpenGLElementBuffer.h  OpenGLGraphicsContext.h  OpenGLRendererAPI.h  OpenGLShader.h  OpenGLTexture.h  OpenGLVertexArray.h  OpenGLVertexBuffer.h
Engine/include/Platform/Windows/: WindowsInput.h  WindowsWindow.h
Engine/include/Renderer/: BufferLayout.h  CubemapTexture.h  ElementBuffer.h  GraphicsContext.h  Mesh.h  Model.h  ModelLoader.h  RenderCommand.h  Renderer.h  Renderer2D.h  RendererAPI.h  Shader.h  Texture.h  VertexArray.h  VertexBuffer.h
Engine/include/Utils/: FileUtils.h  ThreadSafeQueue.h
Engine/rc/shaders/: colorFromLightSource.fragment.glsl  colorFromTexture.fragment.glsl  colorFromTextureMix.fragment.glsl  colorFromUniform.fragment.glsl  colorFromVertex.fragment.glsl  cubemap.fragment.glsl  cubemap.vertex.glsl  position.vertex.glsl  positionAndColor.vertex.glsl  positionAndTexCoords.vertex.glsl  positionNormalAndTexCoords.vertex.glsl  white.fragment.glsl  yellow.fragment.glsl
Engine/src/: Application.cpp  AssetManager.cpp  Camera.cpp  CameraController.cpp  Log.cpp  OrthographicCamera.cpp  OrthographicCameraController.cpp  PerspectiveCamera.cpp  PerspectiveCameraController.cpp  Renderer.cpp  Window.cpp
Engine/src/ECS/: EntityMemoryPool.cpp
Engine/src/ImGui/: CoreImGui.cpp  ImGuiLayer.cpp
Engine/src/Platform/OpenGL/: OpenGLCubemapTexture.cpp  OpenGLElementBuffer.cpp  OpenGLGraphicsContext.cpp  OpenGLRendererAPI.cpp  OpenGLShader.cpp  OpenGLTexture.cpp  OpenGLVertexArray.cpp  OpenGLVertexBuffer.cpp
Engine/src/Platform/Windows/: WindowsInput.cpp  WindowsWindow.cpp
Engine/src/Renderer/: CubemapTexture.cpp  ElementBuffer.cpp  Mesh.cpp  Model.cpp  ModelLoader.cpp  RenderCommand.cpp  Renderer.cpp  Renderer2D.cpp  RendererAPI.cpp  Shader.cpp  Texture.cpp  VertexArray.cpp  VertexBuffer.cpp
Engine/src/Utils/: FileUtils.cpp
